--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,5 +5,6 @@
  *= require_self
  *= require bootstrap_and_overrides
  *= require jquery-wysiwyg
+ *= require jquery-tablesorter
  *= require_tree .
 */
