Fixed events active scope, some localization added, fixed seeds, added confirmation on mass deletion of replies, added example files for database.yml and deploy.rb

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
 <% @events.each do |event| %>
   <tr>
     <td><%= link_to event.title, edit_event_path(event) %>
-    <td><%= event.description %>
+    <td><%= event.description.html_safe %>
     <td><%= event.max_att %>
     <td><%= event.start_date.strftime("%d. %b %Y") %> - <%= event.end_date.strftime("%d. %b %Y") %>
     <td>
